--- a/colortext/colortext.html
+++ b/colortext/colortext.html
@@ -24,7 +24,7 @@
        #c2{
           font-size:150px;
           color:rgba(255, 255, 255, 0.1);
-          background-image:url(./color4.jpg);
+          background-image:url(./color4.png);
           background-position: -20px 0px;
           background-repeat:repeat-x;
           background-clip:text;
@@ -34,7 +34,7 @@
        #c3{
           font-size:150px;
           color:rgba(255, 255, 255, 0.1);
-          background-image:url(./color2.jpg);
+          background-image:url(./color2.png);
           background-position: -20px 0px;
           background-repeat:repeat-x;
           background-clip:text;
